Fixed overflow on smaller screens caused by margin

--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,5 @@
   color: var(--text-primary);
   background-color: var(--background);
   transition: all .5s;
+  overflow: hidden;
 }
